# Medicamentation-Tracker-HA

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/medication_manager/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  frontend.py  history.py  icons.json  manager.py  manifest.json  models.py  nfc.py  notifications.py  runtime.py  scheduler.py  services.py  services.yaml  storage.py
custom_components/medication_manager/frontend/: medication-manager-card.js
custom_components/medication_manager/translations/: en.json  ru.json
docs/: development.md
docs/ru/: development.md  quick-start.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: custom-cards.d.ts  ha.ts  i18n.ts  medication-manager-card.ts  types.ts
tests/: conftest.py  test_history.py  test_manager.py  test_models.py  test_scheduler.py
