[project]
name = "medication-manager"
version = "0.2.0"
description = "Home Assistant medication management integration"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "ASYNC",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "FA",
  "I",
  "LOG",
  "N",
  "PERF",
  "PIE",
  "PTH",
  "RET",
  "RUF",
  "SIM",
  "T20",
  "UP",
  "W",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
show_error_codes = true
pretty = true
